# Link-Ingestor-API

./: .gitignore  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt  setup.py  test_system.py
app/: main.py
app/api/schemas/: ingest.py
app/api/v1/routers/: ingest.py
app/api/v2/routers/: ingest.py
app/api/v2/services/: ingest_service.py
app/core/: config.py
app/db/: base.py
app/db/models/: backlink.py  job.py  link.py
app/domain/: entities.py
app/domain/services/: backlink_service.py  ingest_service.py
app/infrastructure/http/: __init__.py  fetcher_httpx.py
app/infrastructure/parsers/: __init__.py  html.py
app/infrastructure/search_providers/: base.py  bing.py  in_domain.py
app/worker/: __init__.py  tasks.py
docker/: Dockerfile.api  Dockerfile.worker  prometheus.yml
